# agentic-rag-workshop

./: 001_Intro_to_LLMs.ipynb  002_Agentic_RAG_With_LlamaIndex.ipynb  003_Agentic_RAG_Introduction_to_tool_use.ipynb  AgenticRAG_with_LlamaIndex.ipynb  README.md
data/: batting_stats_for_icc_mens_t20_world_cup_2024.csv  bowling_stats_for_icc_mens_t20_world_cup_2024.csv
data/player_wiki/: Axar Patel.txt  Hardik Pandya.txt  Jasprit Bumrah.txt  Kuldeep Yadav.txt  Ravindra Jadeja.txt  Rohit Sharma.txt  Suryakumar Yadav.txt  Virat Kohli.txt  Yashasvi Jaiswal.txt
data/team_wiki/: Australia national cricket team.txt  England cricket team.txt  India national cricket team.txt  New Zealand national cricket team.txt  Pakistan national cricket team.txt  South Africa national cricket team.txt  Sri Lanka national cricket team.txt  West Indies cricket team.txt
webapp/: .env.example  README.md  download_data_wiki.py  pyproject.toml  server.py
webapp/templates/: index.html
